--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image:height" content="630"/>
 
 
-    <title>Single Motion Diffusion</title>
+    <title>ReinDiffuse: Crafting Physically Plausible Motions with Reinforced Diffusion Model</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PQ3PYPGJRH"></script>
     <script>
