--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container is-max-widescreen">
             <!-- <div class="columns is-centered"> -->
             <div class="column has-text-centered">
-                <h1 class="title is-1 publication-title">SinMDM: Single Motion Diffusion</h1>
+                <h1 class="title is-1 publication-title">ReinDiffuse: Crafting Physically Plausible Motions with Reinforced Diffusion Model</h1>
             </div>
         </div>
     </div>
