--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
        </a>
      </div> -->
     <div class="columns is-centered">
-        <div class="column is-8">
+        <div class="column is-8 has-text-centered">
             <div class="content">
                 <p>
                     This website is licensed under a <a rel="license"
