--- a/index.html
+++ b/index.html
@@ -131,6 +131,26 @@
 </section>
 
 
+<section class="hero teaser">
+    <div class="container is-max-desktop">
+        <div class="hero-body">
+
+            <div class="column is-centered has-text-centered">
+                <img src="static/figures/teaser.png" alt="breakdancing dragons" width="80%"/>
+            </div>
+            <!--      <video id="teaser" autoplay muted loop playsinline height="100%">-->
+            <!--        <source src="./static/figures/teaser_all.png"-->
+            <!--                type="video/mp4">-->
+            <!--      </video>-->
+            <h2 class="subtitle has-text-centered">
+                <!--<span class="sin-mdm">SinMDM</span>-->
+                Our ReinDiffuse can generate physically plausible motion, effectively eliminating common physical issues such as floating, penetration, foot clipping, and skating. ReinDiffuse enables MDM to learn physical commonsense with reinforcement learning. 
+            </h2>
+
+        </div>
+    </div>
+</section>
+
 <!-- BibTeX -->
 
 <!--section class="section" id="BibTeX">
