--- a/index.html
+++ b/index.html
@@ -151,6 +151,35 @@
     </div>
 </section>
 
+
+<section class="section hero is-light">
+    <div class="container is-max-desktop">
+      <!-- Abstract. -->
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <div class="item">
+            <p style="margin-bottom: 30px">
+  
+          <video poster="" id="tree" autoplay controls muted loop height="100%">
+            <source src="static/videos/ReinDiffuse_Supp.mp4"
+            type="video/mp4">
+          </video>
+  
+          <!-- <iframe width="720" height="405" src="https://www.youtube.com/embed/rVkIDj5wgjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </p>
+          </div>
+          <!-- <h2 class="title is-3">Abstract</h2> -->
+          <!-- <div class="content has-text-justified">
+            <p>
+              xxx.</p>
+          </div> -->
+        </div>
+      </div>
+      <!--/ Abstract. -->
+    </div>
+  </section>
+  
+
 <!-- BibTeX -->
 
 <!--section class="section" id="BibTeX">
