--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </span>
 
                             <span class="link-block">
-                <a href="https://github.com/reindiffuse/ReinDiffuse" target="_blank"
+                <a href=" " target="_blank"
                    class="external-link button is-normal is-rounded">
                 <span class="icon">
                   <i class="fab fa-github"></i>
